RESOLVED FIXED303915
REGRESSION(303968@main): [GStreamer] flaky crash: media/video-played-reset.html
https://bugs.webkit.org/show_bug.cgi?id=303915
Summary REGRESSION(303968@main): [GStreamer] flaky crash: media/video-played-reset.html
Philippe Normand
Reported 2025-12-10 04:24:29 PST
Thread 1 (Thread 0x7f362a7fc6c0 (LWP 721366)): #0 0x00007f38c20255ff in WTFCrash () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #1 0x00007f38c8619c31 in WebCore::GstMappedFrame::get() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #2 0x00007f38c6009c34 in WebCore::CoordinatedPlatformLayerBufferVideo::paintToTextureMapper(WebCore::TextureMapper&, WebCore::FloatRect const&, WebCore::TransformationMatrix const&, float) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #3 0x00007f38c5fd6081 in WebCore::TextureMapperLayer::paintSelf(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #4 0x00007f38c5fe00a0 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #5 0x00007f38c5fe04c8 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #6 0x00007f38c5fe04c8 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #7 0x00007f38c5fe04c8 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #8 0x00007f38c5fe04c8 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #9 0x00007f38c5fe04c8 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #10 0x00007f38c5fe04c8 in WebCore::TextureMapperLayer::paintSelfAndChildren(WebCore::TextureMapperPaintOptions&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #11 0x00007f38c5fe2af0 in WebCore::TextureMapperLayer::paint(WebCore::TextureMapper&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #12 0x00007f38c5f38e52 in WebKit::ThreadedCompositor::paintToCurrentGLContext(WebCore::TransformationMatrix const&, WebCore::IntSize const&) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #13 0x00007f38c5f407e8 in WebKit::ThreadedCompositor::renderLayerTree() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #14 0x00007f38c5f31ac9 in WTF::Detail::CallableWrapper<WTF::RunLoop::Timer::Timer<WebKit::ThreadedCompositor>(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral, WebKit::ThreadedCompositor*, void (WebKit::ThreadedCompositor::*)())::{lambda()#1}, void>::call() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libwebkitgtk-6.0.so.4 #15 0x00007f38c215c841 in WTF::RunLoop::TimerBase::TimerBase(WTF::Ref<WTF::RunLoop, WTF::RawPtrTraits<WTF::RunLoop>, WTF::DefaultRefDerefTraits<WTF::RunLoop> >&&, WTF::ASCIILiteral)::{lambda(void*)#1}::_FUN(void*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #16 0x00007f38c21600fd in WTF::RunLoop::{lambda(_GSource*, int (*)(void*), void*)#1}::_FUN(_GSource*, int (*)(void*), void*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #17 0x00007f38bfa2b49e in ??? () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #18 0x00007f38bfa2b710 in g_main_context_dispatch () at /lib/x86_64-linux-gnu/libglib-2.0.so.0 #19 0x00007f38c215e5a7 in WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #20 0x00007f38c215e9b2 in WTF::RunLoop::run() () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #21 0x00007f38c20e44cd in WTF::Thread::entryPoint(WTF::Thread::NewThreadContext*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #22 0x00007f38c216384d in WTF::wtfThreadEntryPoint(void*) () at /home/buildbot-worker/GTK-Linux-64-bit-Release-Build/build/WebKitBuild/GTK/Release/lib/libjavascriptcoregtk-6.0.so.1 #23 0x00007f38c348aaa4 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:447 #24 0x00007f38c3517c6c in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:78 STDERR: 0:00:32.688595013 721190 0x7f384c005c50 ERROR videometa gstvideometa.c:424:default_map: plane 1, no memory at offset 99456 STDERR: 0:00:32.688612743 721190 0x7f384c005c50 ERROR default video-frame.c:168:gst_video_frame_map_id: failed to map video frame plane 1 STDERR: 0:00:32.721317552 721190 0x55cbf8196a80 ERROR webkitcommon GStreamerCommon.cpp:1072:operator():<regular-media-player-54> Got message: error message: 0x7f358c01ae90, time 99:99:99.999999999, seq-num 41776, element 'avdec_h264-50', GstMessageError, gerror=(GError)NULL, debug=(string)"../../../../../jhbuild/checkout/gstreamer/subprojects/gst-libav/ext/libav/gstavviddec.c\(1893\):\ get_output_buffer\ \(\):\ /GstPlayBin:regular-media-player-54/GstURIDecodeBin:uridecodebin51/GstDecodeBin:decodebin51/avdec_h264:avdec_h264-50:\012The\ video\ memory\ allocated\ from\ downstream\ pool\ could\ not\ mapped\ for\ read\ and\ write."; STDERR: 0:00:32.721384962 721190 0x55cbf8196a80 ERROR webkitmediaplayer MediaPlayerPrivateGStreamer.cpp:2121:handleMessage:<regular-media-player-54> Cannot access memory for read and write operation. (url=file:///home/buildbot-worker/GTK-Linux-64-bit-Release-Tests/build/LayoutTests/media/content/test.mp4) (code=7) STDERR: 0:00:32.724141291 721190 0x7f384c004d90 ERROR videometa gstvideometa.c:424:default_map: plane 1, no memory at offset 99456 STDERR: 0:00:32.724169891 721190 0x7f384c004d90 ERROR default video-frame.c:168:gst_video_frame_map_id: failed to map video frame plane 1
Attachments
Philippe Normand
Comment 1 2025-12-10 04:27:57 PST
EWS
Comment 2 2025-12-11 03:22:22 PST
Committed 304286@main (f040d9509180): <https://commits.webkit.org/304286@main> Reviewed commits have been landed. Closing PR #55169 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-12-11 03:23:13 PST
Note You need to log in before you can comment on or make changes to this bug.