REGRESSION(303968@main): [GStreamer] flaky crash: media/video-played-reset.html https://bugs.webkit.org/show_bug.cgi?id=303915

Reviewed by Xabier Rodriguez-Calvar.

The crash happened because paintToTextureMapper() was called with a non-nullopt m_videoFrame. We now
clear it when video frame mapping has failed, so the m_videoFrame contains a value only if it is
valid.

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayerBufferVideo.cpp:
(WebCore::CoordinatedPlatformLayerBufferVideo::createBufferIfNeeded):
(WebCore::CoordinatedPlatformLayerBufferVideo::createBufferFromGLMemory):
(WebCore::CoordinatedPlatformLayerBufferVideo::paintToTextureMapper):

Canonical link: https://commits.webkit.org/304286@main